[package]
name = "xsv"
version = "0.13.0"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = "A high performance CSV command line toolkit."
documentation = "https://burntsushi.net/rustdoc/xsv/"
homepage = "https://github.com/BurntSushi/xsv"
repository = "https://github.com/BurntSushi/xsv"
readme = "README.md"
keywords = ["csv", "tsv", "slice", "command"]
license = "Unlicense/MIT"
autotests = false

include = [
    "LICENSE-MIT",
    "UNLICENSE",
    "COPYING",
    "BENCHMARKS.md",
    "Readme.md",
    "Cargo.toml",
    "src/*",
    "tests/*.rs",
]

[lib]
name = "xsv"

[[test]]
name = "tests"

[profile.release]
opt-level = 3
debug = true

[profile.test]
opt-level = 3

[dependencies]
byteorder = { git = "https://github.com/mesalock-linux/byteorder-sgx" }
csv = { git = "https://github.com/GeminiCarrie/rust-csv.git",tag="sgx_v1.0.0"}
csv-index = {git = "https://github.com/GeminiCarrie/rust-csv.git",tag="sgx_v1.0.0"}
docopt = {git= "https://github.com/GeminiCarrie/docopt.rs.git",tag ="sgx_v1.1.0"}
rand         = { git = "https://github.com/mesalock-linux/rand-sgx", tag = "v0.7.3_sgx1.1.2" }
regex        = { git = "https://github.com/mesalock-linux/regex-sgx" }
serde        = { git = "https://github.com/mesalock-linux/serde-sgx"}
serde_derive = { git = "https://github.com/mesalock-linux/serde-sgx"}
streaming-stats ={git="https://github.com/GeminiCarrie/rust-stats",tag="sgx_v1.0.9"}
sgx_tstd = { rev = "v1.0.9", git = "https://github.com/baidu/rust-sgx-sdk.git",optional = true}
#tabwriter ={git ="https://github.com/GeminiCarrie/tabwriter.git",tag="v1.1.0_sgx",features=["mesalock_sgx"]}

[dev-dependencies]
quickcheck = { version = "0.7", default-features = false }
#log = "0.4"
filetime = "0.1"

[features]
default = ["mesalock_sgx"]
mesalock_sgx = ["sgx_tstd"]
