[package]
name = "Helloworldsampleenclave"
version = "1.0.0"
authors = ["Baidu"]

[lib]
name = "helloworldsampleenclave"
crate-type = ["staticlib"]

[features]
default = []

[dependencies]
xsv = { path = "../../../" }
csv = {git = "https://github.com/GeminiCarrie/rust-csv.git",tag="sgx_v1.0.0"}
serde        = { git = "https://github.com/mesalock-linux/serde-sgx" }
serde_derive = { git = "https://github.com/mesalock-linux/serde-sgx" }
streaming-stats ={git="https://github.com/GeminiCarrie/rust-stats",tag="sgx_v1.0.9"}
sgx_types = { rev = "v1.0.9", git = "https://github.com/baidu/rust-sgx-sdk.git"}
sgx_tstd = { rev = "v1.0.9", git = "https://github.com/baidu/rust-sgx-sdk.git"}
sgx_tunittest = { rev = "v1.0.9", git = "https://github.com/baidu/rust-sgx-sdk.git"}
uuid         = { git = "https://github.com/mesalock-linux/uuid-sgx",features = ["v4"]  }